--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 }
 
 :root {
-  --color-primary: #0c82dc;
+  --color-primary: #6510ad;
 }
 
 .w {
@@ -123,20 +123,6 @@
     background: url(../img/btn_right.png) no-repeat center;
   }
 }
-
-/* @keyframes bian {
-  0%,
-  100% {
-    opacity: 0.2;
-    backdrop-filter: blur(10px);
-  }
-
-  30%,
-  80% {
-    opacity: 1;
-    backdrop-filter: blur(0px);
-  }
-} */
 
 /*当屏幕尺寸小于1100px时，应用下面的CSS样式,详细用法网址：https://www.xuewangzhan.net/baike/css3-379.html*/
 @media screen and (max-width: 1100px) {
