--- a/css/common.css
+++ b/css/common.css
@@ -33,8 +33,27 @@
   background: url(../img/header-bg.png) repeat-x;
 }
 
+#header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(to right, #6510ac, #1735d1);
+}
+
+#header::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: 0;
+  width: 100px;
+  height: 80px;
+  background: linear-gradient(16deg, #6510ac, 48%, #1735d1);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
+}
+
 .header_logo {
-  float: left;
   position: absolute;
   top: 37px;
   left: 45px;
@@ -274,6 +293,52 @@
   color: rgba(12, 130, 220, 1);
   background: #ededed;
 }
+
+.header_nav_icon {
+  position: absolute;
+  top: 4px;
+  right: -6px;
+  width: 100px;
+  height: 80px;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.header_nav_icon::before,
+.header_nav_icon::after,
+.header_nav_icon .nav_icon_center {
+  position: absolute;
+  content: "";
+  width: 30px;
+  height: 2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -9px);
+  background: #fff;
+  transition: opacity 0.2s, transform 0.3s;
+  border: none;
+}
+.header_nav_icon .nav_icon_center {
+  opacity: 1;
+  transform: translate(-50%, 0);
+  transform-origin: center center;
+}
+.header_nav_icon::after {
+  transform: translate(-50%, 9px);
+  transform-origin: center center;
+}
+
+.nav_icon_checkbox:checked + .header_nav_icon .nav_icon_center {
+  opacity: 0;
+}
+
+.nav_icon_checkbox:checked + .header_nav_icon::before {
+  transform: translate(-50%) rotate(45deg);
+}
+.nav_icon_checkbox:checked + .header_nav_icon::after {
+  transform: translate(-50%) rotate(-45deg);
+}
+
 /*头部结束*/
 
 /*footer模块开始*/
